tests/contract_testcases/substrate/arrays/storage_delete_01.sol

        contract foo {
            int32[] bar;

            function test() public {
                int32 x = delete bar;
            }
        }
// ---- Expect: diagnostics ----
// error: 6:27-37: delete not allowed in expression
